--- a/style.css
+++ b/style.css
@@ -3,3 +3,14 @@
     content:'';
     height:60px;
 } */
+#map {
+    width: 100%;
+    height:100%;
+    border-radius: 10px;
+}
+
+@media (min-width:768px) {
+    .newsinput {
+        width: 50%;
+    }
+}
